completed integrated supertest
